# Nomad-Launcher-Fork

./: .gitattributes  .gitignore  AUDIT.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  TRADEMARKS.md  check-hardening-drift.ps1  dist.ps1  nomad-release-signing-key.asc
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  hardening-sync.yml  scorecard.yml  zizmor.yml
core/: Cargo.toml
core/baselines/: arkenfox-user.js  ungoogled-flags.md
core/keys/: firefox.asc  gorhill.asc  mullvad.asc
core/payloads/chromium/: local_state.json  preferences.json
core/payloads/firefox/: autoconfig.js  nomad.cfg  policies.json  user.js
core/payloads/librewolf/: user.js
core/payloads/waterfox/: user.js
core/src/: authenticode.rs  branding.rs  config.rs  downloader.rs  extensions.rs  extract.rs  gpg.rs  hardening.rs  install.rs  lib.rs  registry.rs  taskbar.rs  updater.rs  version_cache.rs
core/src/browsers/: bitwarden.rs  firefox.rs  floorp.rs  github.rs  helium.rs  librewolf.rs  mod.rs  mullvad.rs  ungoogled.rs  waterfox.rs
core/src/ui/: identity.rs  mod.rs  theme.rs
core/tests/integration/: downloader.rs  main.rs  pipeline.rs  ungoogled.rs
launchers/bitwarden/: Cargo.toml  build.rs
launchers/bitwarden/src/: main.rs
launchers/firefox/: Cargo.toml  build.rs
launchers/firefox-esr/: Cargo.toml  build.rs
launchers/firefox-esr/src/: main.rs
launchers/firefox/src/: main.rs
launchers/floorp/: Cargo.toml  build.rs
launchers/floorp/src/: main.rs
launchers/helium/: Cargo.toml  build.rs
launchers/helium/src/: main.rs
launchers/librewolf/: Cargo.toml  build.rs
launchers/librewolf/src/: main.rs
launchers/mullvad/: Cargo.toml  build.rs
launchers/mullvad/src/: main.rs
launchers/ungoogled-chromium/: Cargo.toml  build.rs
launchers/ungoogled-chromium/examples/: ui_preview.rs
launchers/ungoogled-chromium/src/: main.rs
launchers/waterfox/: Cargo.toml  build.rs
launchers/waterfox/src/: main.rs
scripts/: verify_pak_logos.py
tasks/: plan.md  todo.md
