[package]
name = "nomad-firefox-esr"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Nomad Launcher for Firefox ESR."

[[bin]]
name = "Nomad-Firefox-ESR"
path = "src/main.rs"

[dependencies]
nomad-core = { workspace = true }

[build-dependencies]
winresource = "0.1"
