[package]
name = "nomad-helium"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Nomad Launcher for Helium."

[[bin]]
name = "Nomad-Helium"
path = "src/main.rs"

[dependencies]
nomad-core = { workspace = true }

[build-dependencies]
winresource = "0.1"
