[package]
name = "nomad-librewolf"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Nomad Launcher for LibreWolf."

[[bin]]
name = "Nomad-LibreWolf"
path = "src/main.rs"

[dependencies]
nomad-core = { workspace = true }

[build-dependencies]
winresource = "0.1"
