[package]
name = "nomad-ungoogled-chromium"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Nomad Launcher for ungoogled-chromium."

[[bin]]
name = "Nomad-Chromium"
path = "src/main.rs"

[dependencies]
nomad-core = { workspace = true }

[build-dependencies]
winresource = "0.1"
