[package]
name = "nomad-waterfox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Nomad Launcher for Waterfox."

[[bin]]
name = "Nomad-Waterfox"
path = "src/main.rs"

[dependencies]
nomad-core = { workspace = true }

[build-dependencies]
winresource = "0.1"
